--- a/css/style.css
+++ b/css/style.css
@@ -1524,10 +1524,12 @@ blockquote p {
  	background: rgba(0,0,0,.8); 
 }
 .ccsw-prev {
-	left: 50px;
+	left: 30px;
+	top: 88%;
 }
 .ccsw-next {
-	right: 50px;
+	right: 30px;
+	top: 88%;
 }
 .ccsw-prev .fw-carousel_conter {
 	left: 90px;
